[gd_scene load_steps=3 format=3 uid="uid://ib8ydhcaklwy"]

[ext_resource type="Script" path="res://addons/controller_icons/objects/ControllerIconPathSelectorPopup.gd" id="1_6s0ph"]
[ext_resource type="PackedScene" uid="uid://dijn7haax0boi" path="res://addons/controller_icons/objects/ControllerIconPathSelector.tscn" id="2_gfs7t"]

[node name="ControllerIconPathSelectorPopup" type="ConfirmationDialog"]
title = "Select an icon path"
position = Vector2i(0, 36)
size = Vector2i(866, 507)
visible = true
script = ExtResource("1_6s0ph")

[node name="ControllerIconPathSelector" parent="." instance=ExtResource("2_gfs7t")]
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="path_selected" from="ControllerIconPathSelector" to="." method="_on_controller_icon_path_selector_path_selected"]
